# learn-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/: shader.fs  shader.vs
src/: file.c  file.h  main.c  shader.c  shader.h
